# JetsonTX2_WS

./: README.md
base_station/teleoperation/config/: ssh.sh
base_station/teleoperation/src/: teleop.py
dependencies/roar_msgs/: CMakeLists.txt
localization/: CMakeLists.txt  package.xml
localization/include/: ROAR_UKF.h
localization/launch/: UKF.launch   rosserial.launch  simulation.launch  ukf.launch  ukf_deb.launch
localization/msg/: buffer.msg
localization/scripts/: model_state_publisher.py  synchronizer.py  visualization.py  visualization_truth.py
localization/src/: OOSM.cpp  Quaternion.cpp  ROAR_UKF.cpp  ROAR_UKF_main.cpp  ROAR_main_simulation.cpp  main.cpp
navigation/scripts/: purepursuit.py
roscan/roscan/config/: can0.sh  vcan0.sh
roscan/roscan/launch/: roscan.launch
roscan/roscan/src/: GPS_publisher.py  arm_teleoperation.py  roscan_converter.py  roscan_converter2.py
supervisor/launch/: .roar.launch.swp
